--- a/aenode/templates/statefullset.yaml
+++ b/aenode/templates/statefullset.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.type == "StatefullSet" }}
+{{- if eq .Values.type "StatefullSet" }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
