--- a/aenode/templates/pv.yaml
+++ b/aenode/templates/pv.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: ebs-claim
+  name: aenode
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: resize-sc
+  storageClassName: gpz
   resources:
     requests:
       storage: 4Gi
