--- a/aenode/templates/pv.yaml
+++ b/aenode/templates/pv.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: gpz
+  storageClassName: gp2
   resources:
     requests:
       storage: 4Gi
