--- a/aenode/templates/statefullset.yaml
+++ b/aenode/templates/statefullset.yaml
@@ -22,6 +22,15 @@ spec:
       labels:
         {{- include "aenode.selectorLabels" . | nindent 8 }}
     spec:
+      volumeClaimTemplates:
+      - metadata:
+          name: aenode
+        spec:
+          accessModes: ["ReadWriteOnce"]
+          storageClassName: "gp2"
+          resources:
+            requests:
+              storage: 4Gi
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
