change mount location

--- a/aenode/templates/statefullset.yaml
+++ b/aenode/templates/statefullset.yaml
@@ -69,7 +69,7 @@ spec:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
           - name: data
-            mountPath: /home/aeternity/node/data
+            mountPath: /data
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
