--- a/aenode/templates/statefullset.yaml
+++ b/aenode/templates/statefullset.yaml
@@ -40,6 +40,9 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       initContainers:
+        - name: ls1
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          command: ["ls","-lah"]
         - name: ls
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           command: ["ls","-lah","data"]
