--- a/dev-net-hyperchain/Chart.yaml
+++ b/dev-net-hyperchain/Chart.yaml
@@ -5,6 +5,6 @@ description: A Helm chart for Kubernetes
 version: 0.2.0
 
 dependencies: # A list of the chart requirements (optional)
-  - name: aenode
-    version: 0.5.0
-    repository: "file://../aenode"
+  - name: app
+    version: 0.4.0
+    repository: "file://../app"
