--- a/app/templates/config.yaml
+++ b/app/templates/config.yaml
@@ -53,7 +53,7 @@ data:
       - "13.53.162.212"
       - "13.53.89.32"
       - "13.53.78.163"
-    
+
     node_config:
       peers:
           - "aenode://pp_2gPZjuPnJnTVEbrB9Qgv7f4MdhM4Jh6PD22mB2iBA1g7FRvHTk@52.220.198.72:3015"
@@ -72,41 +72,41 @@ data:
           - "aenode://pp_Wmt5BLDUEvtdepfDy4uP25RddDDBchJE9v5m1vGgiLV9DUkVP@39.98.92.160:3015"
           - "aenode://pp_2SUrvyk68SSeQFvXUZhenqHVahHXJHmefMkSgyE5hD4BaXduoc@39.98.94.94:3015"
           - "aenode://pp_2yJFvQHRDJkyhXSojDg7cSNoXaYU6hrtttknr2sDzJyimTR8m@118.31.59.151:3015"
-    
+
       sync:
         port: 3015
         max_gossip: 100
         max_inbound: 200
         max_outbound: 30
-    
+
       http:
         external:
           port: 3013
         internal:
           port: 3113
-    
+
       keys:
         dir: keys
         peer_password: secret
-    
+
       chain:
         persist: true
-        db_path: "/data/db{{ db_version|mandatory }}"
+        db_path: "/data/db1"
         garbage_collection:
           enabled: true
           history: 500
           interval: 480
-    
+
       mining:
         autostart: false
-    
+
       logging:
         level: warning
-    
+
       metrics:
           # StatsD server and port
           host: 127.0.0.1
           port: 8125
-    
+
       fork_management:
         network_id: "ae_mainnet"
