--- a/dev-net-hyperchain/values.yaml
+++ b/dev-net-hyperchain/values.yaml
@@ -6,6 +6,8 @@ app:
   replicaCount: 1
   podSecurityContext:
     fsGroup: 1000
+  service:
+    port: 3013
   ingress:
     enabled: "true"
     hosts:
