--- a/app/templates/statefullset.yaml
+++ b/app/templates/statefullset.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     {{- include "app.labels" . | nindent 4 }}
 spec:
-  serviceName: "dev-net-hyperchain-app"
+  serviceName: {{ include "app.fullname" . }}
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
