--- a/app/templates/statefullset.yaml
+++ b/app/templates/statefullset.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ include "app.fullname" . }}
   labels:
     {{- include "app.labels" . | nindent 4 }}
-    app.kubernetes.io/version: {{ $val.version }}
+    app.kubernetes.io/version: {{ .Values.image.tag }}
 spec:
   serviceName: {{ include "app.fullname" . }}
   {{- if not .Values.autoscaling.enabled }}
