--- a/app/templates/statefullset.yaml
+++ b/app/templates/statefullset.yaml
@@ -32,6 +32,7 @@ spec:
       {{- end }}
       labels:
         {{- include "app.selectorLabels" . | nindent 8 }}
+        app.kubernetes.io/version: {{ .Values.image.tag }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
