--- a/app/templates/service-nodeport.yaml
+++ b/app/templates/service-nodeport.yaml
@@ -1,3 +1,9 @@
+{{ $versions := .Values.versions }}
+{{ $allVersions := append $versions (merge (dict "version" (default .Values.image.tag .Chart.AppVersion )) $) | compact | uniq }}
+{{- range $key, $val := $allVersions}}
+{{- if $val.version }}
+---
+
 apiVersion: v1
 kind: Service
 metadata:
@@ -13,3 +19,5 @@ spec:
   - protocol: TCP
     port: 3013
     targetPort: 3013
+{{- end }}
+{{- end }}
