--- a/app/templates/service-nodeport.yaml
+++ b/app/templates/service-nodeport.yaml
@@ -8,12 +8,16 @@ apiVersion: v1
 kind: Service
 metadata:
   name: node-port
-spec:
-  externalTrafficPolicy: Cluster
-  selector:
   labels:
     {{- include "app.labels" $ | nindent 4 }}
     app.kubernetes.io/version: {{ $val.version }}
+    statefulset.kubernetes.io/pod-name: dev-net-hyperchain-app-1
+spec:
+  externalTrafficPolicy: Cluster
+  selector:
+    {{- include "app.selectorLabels" $ | nindent 4 }}
+    app.kubernetes.io/version: {{ $val.version }}
+    statefulset.kubernetes.io/pod-name: dev-net-hyperchain-app-1
   type: NodePort
   ports:
   - protocol: TCP
