--- a/app/templates/service-nodeport.yaml
+++ b/app/templates/service-nodeport.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.nodeport "yes" }}
 {{ $versions := .Values.versions }}
 {{ $allVersions := append $versions (merge (dict "version" (default .Values.image.tag .Chart.AppVersion )) $) | compact | uniq }}
 {{- range $key, $val := $allVersions}}
@@ -24,6 +25,7 @@ spec:
     port: 3013
     targetPort: 3013
     nodePort: 30000
+{{- end }}
 {{- end }}
 {{- end }}
 {{- end }}
