--- a/dev-net-hyperchain/values.yaml
+++ b/dev-net-hyperchain/values.yaml
@@ -25,5 +25,5 @@ app:
     value: "yes"
     effect: "NoSchedule"
   nodeSelector:
-    public: yes
-  nodeport: no
+    public: "yes"
+  nodeport: "no"
