--- a/app/templates/statefullset.yaml
+++ b/app/templates/statefullset.yaml
@@ -1,4 +1,12 @@
 {{- if eq .Values.type "StatefullSet" }}
+---
+apiVersion: storage.k8s.io/v1beta1
+kind: CSIDriver
+metadata:
+  name: efs.csi.aws.com
+spec:
+  attachRequired: false
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -23,7 +31,9 @@ spec:
       resources:
         requests:
           storage: 200Gi
-
+      csi:
+        driver egs.csi.aws.com
+        volumeHandle:  fs-0949054d5e250a9b2
   template:
     metadata:
       {{- with .Values.podAnnotations }}
