--- a/app/templates/statefullset.yaml
+++ b/app/templates/statefullset.yaml
@@ -14,18 +14,15 @@ spec:
   selector:
     matchLabels:
       {{- include "app.selectorLabels" . | nindent 6 }}
-  volumeClaimTemplates:
-  - metadata:
-      name: data
-    spec:
-      accessModes: ["ReadWriteOnce"]
-      storageClassName: "efs-sc"
-      resources:
-        requests:
-          storage: 200Gi
-      csi:
-        driver: egs.csi.aws.com
-        volumeHandle: fs-0949054d5e250a9b2
+#  volumeClaimTemplates:
+#  - metadata:
+#      name: data
+#    spec:
+#      accessModes: ["ReadWriteOnce"]
+#      storageClassName: "gp2"
+#      resources:
+#        requests:
+#          storage: 200Gi
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -60,10 +57,10 @@ spec:
 
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          volumeMounts:
-          - name: data
-            mountPath: /data
-          - name: config-volume
+#          volumeMounts:
+#          - name: data
+#            mountPath: /data
+#          - name: config-volume
             mountPath: /home/aeternity/node/aeternity.yaml
             subPath: aeternity.yaml
       {{- with .Values.nodeSelector }}
