--- a/app/templates/config.yaml
+++ b/app/templates/config.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   aeternity.yaml: |
     chain:
-        db_path: /data/db1
+#        db_path: /data/db1
         garbage_collection:
             enabled: true
             history: 500
