--- a/app/templates/config-crd.yaml
+++ b/app/templates/config-crd.yaml
@@ -123,3 +123,10 @@ spec:
             - "--v=5"
             - "--leader-election=true"
           imagePullPolicy: IfNotPresent
+---
+apiVersion: snapshot.storage.k8s.io/v1beta1
+kind: VolumeSnapshotClass
+metadata:
+  name: test-snapclass
+driver: ebs.csi.aws.com
+deletionPolicy: Delete
