--- a/app/templates/statefulset.yaml
+++ b/app/templates/statefulset.yaml
@@ -14,15 +14,15 @@ spec:
   selector:
     matchLabels:
       {{- include "app.selectorLabels" . | nindent 6 }}
-#  volumeClaimTemplates:
-#  - metadata:
-#      name: data
-#    spec:
-#      accessModes: ["ReadWriteOnce"]
-#      storageClassName: "gp2"
-#      resources:
-#        requests:
-#          storage: 200Gi
+  volumeClaimTemplates:
+  - metadata:
+      name: data
+    spec:
+      accessModes: ["ReadWriteOnce"]
+      storageClassName: "gp2"
+      resources:
+        requests:
+          storage: 200Gi
   template:
     metadata:
       {{- with .Values.podAnnotations }}
