--- a/app/templates/statefulset.yaml
+++ b/app/templates/statefulset.yaml
@@ -14,15 +14,15 @@ spec:
   selector:
     matchLabels:
       {{- include "app.selectorLabels" . | nindent 6 }}
-  volumeClaimTemplates:
-  - metadata:
-      name: data
-    spec:
-      accessModes: ["ReadWriteOnce"]
-      storageClassName: "gp2"
-      resources:
-        requests:
-          storage: 200Gi
+#  volumeClaimTemplates:
+#  - metadata:
+#      name: data
+#    spec:
+#      accessModes: ["ReadWriteOnce"]
+#      storageClassName: "gp2"
+#      resources:
+#        requests:
+#          storage: 200Gi
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -58,8 +58,8 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
-          - name: data
-            mountPath: /data
+#          - name: data
+#            mountPath: /data
           - name: config-volume
             mountPath: /home/aeternity/node/aeternity.yaml
             subPath: aeternity.yaml
