--- a/dev-net-hyperchain/values.yaml
+++ b/dev-net-hyperchain/values.yaml
@@ -2,7 +2,7 @@ app:
   image:
     repository: aeternity/aeternity
     tag: v6.5.2
-  type: StatefullSet
+  type: StatefullSeta
   replicaCount: 3
   podSecurityContext:
     fsGroup: 1000
