--- a/app/templates/snap.yaml
+++ b/app/templates/snap.yaml
@@ -4,7 +4,7 @@ kind: StorageClass
 metadata:
   name: ebs-sc
 provisioner: ebs.csi.aws.com
-volumeBindingMode: WaitForFirstConsumer
+volumeBindingMode: Immediate
 
 ---
 apiVersion: v1
