--- a/app/templates/snap.yaml
+++ b/app/templates/snap.yaml
@@ -1,9 +1,9 @@
-#---
-#apiVersion: storage.k8s.io/v1
-#kind: StorageClass
-#metadata:
-#  name: ebs-sc
-#provisioner: ebs.csi.aws.com
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: ebs-sc
+provisioner: ebs.csi.aws.com
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
