--- a/app/templates/snap.yaml
+++ b/app/templates/snap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.persistence.enabled }}
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
@@ -25,3 +26,4 @@ spec:
   volumeSnapshotClassName: csi-aws-vsc
   source:
     persistentVolumeClaimName: ebs-claim
+{{- end }}
