--- a/dev-net-hyperchain/values.yaml
+++ b/dev-net-hyperchain/values.yaml
@@ -13,12 +13,12 @@ app:
       cpu: 1.2
     requests:
       cpu: 1.1
-  ingress:
-    enabled: "false"
-    hosts:
-      - host: "dev-hc-node.dev.aepps.com" # has to be changed/disscused
-        paths:
-          - path: "/"
+#  ingress:
+#    enabled: "false"
+#    hosts:
+#      - host: "dev-hc-node.dev.aepps.com" # has to be changed/disscused
+#        paths:
+#          - path: "/"
   tolerations:
   - key: "public"
     operator: "Equal"
