add ap to user restored claim

--- a/app/templates/snap-class.yaml
+++ b/app/templates/snap-class.yaml
@@ -96,3 +96,22 @@ spec:
     name: ebs-claim-hourly-202209072007
     kind: VolumeSnapshot
     apiGroup: snapshot.storage.k8s.io
+
+--
+apiVersion: v1
+kind: Pod
+metadata:
+  name: app-2
+spec:
+  containers:
+  - name: app
+    image: centos
+    command: ["/bin/sh"]
+    args: ["-c", "while true; do echo $(date -u) >> /data/out.txt; sleep 5; done"]
+    volumeMounts:
+    - name: persistent-storage
+      mountPath: /data
+  volumes:
+  - name: persistent-storage
+    persistentVolumeClaim:
+      claimName: ebs-snapshot-restored-claim
