--- a/dev-net-aenode/values.yaml
+++ b/dev-net-aenode/values.yaml
@@ -14,9 +14,9 @@ app:
     requests:
       cpu: 1.1
 #  ingress:
-#    enabled: "false"
+#    enabled: "true"
 #    hosts:
-#      - host: "dev-hc-node.dev.aepps.com" # has to be changed/disscused
+#      - host: "dev-aenode.dev.aepps.com" # has to be changed/disscused
 #        paths:
 #          - path: "/"
   tolerations:
