--- a/dev-net-aenode/Chart.yaml
+++ b/dev-net-aenode/Chart.yaml
@@ -5,6 +5,6 @@ description: A Helm chart for Kubernetes
 version: 0.2.0
 
 dependencies: # A list of the chart requirements (optional)
-  - name: aenode
+  - name: app
     version: 0.5.0
-    repository: "file://../aenode"
+    repository: "file://../app"
