--- a/aenode/templates/statefullset.yaml
+++ b/aenode/templates/statefullset.yaml
@@ -2,18 +2,18 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: {{ include "app.fullname" . }}
+  name: {{ include "aenode.fullname" . }}
   labels:
-    {{- include "app.labels" . | nindent 4 }}
+    {{- include "aenode.labels" . | nindent 4 }}
     app.kubernetes.io/version: {{ .Values.image.tag }}
 spec:
-  serviceName: {{ include "app.fullname" . }}
+  serviceName: {{ include "aenode.fullname" . }}
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "app.selectorLabels" . | nindent 6 }}
+      {{- include "aenode.selectorLabels" . | nindent 6 }}
 #  volumeClaimTemplates:
 #  - metadata:
 #      name: data
@@ -30,14 +30,14 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "app.selectorLabels" . | nindent 8 }}
+        {{- include "aenode.selectorLabels" . | nindent 8 }}
         app.kubernetes.io/version: {{ .Values.image.tag }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "app.serviceAccountName" . }}
+      serviceAccountName: {{ include "aenode.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       volumes:
