--- a/aenode/templates/configmaps.yaml
+++ b/aenode/templates/configmaps.yaml
@@ -1,13 +1,12 @@
 {{- if .Values.configmaps.enabled -}}
-{{- range $configmaps := .Values.configmaps.maps }}
+{{- range $key, $value := .Values.configmaps.maps }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .name }}
 data:
-    {{- range $key, $value := .data }}
-    {{ $key }}: {{ $value | quote }}
-    {{- end }}
+    {{ $key }}: |
+    {{ .data  | nindent 4 }}
 ---
 {{- end }}
 {{- end }}
