--- a/aenode/templates/config.yaml
+++ b/aenode/templates/config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: aeternity
+  name: aeternity_deprecated
   namespace: aenodes
 data:
   aeternity.yaml: |
