--- a/aenode/templates/configmaps.yaml
+++ b/aenode/templates/configmaps.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .name }}
+  name: {{ $key }}
 data:
     {{ $key }}: |
     {{ .data  | nindent 6 }}
