--- a/dev-net-snapshoot/Chart.yaml
+++ b/dev-net-snapshoot/Chart.yaml
@@ -8,3 +8,6 @@ dependencies: # A list of the chart requirements (optional)
   - name: app
     version: 0.4.0
     repository: "file://../snapshoot"
+  - name: aenode
+    version: 0.5.0
+    repository: "file://../aenode"
