--- a/dev-net-snapshoot/values.yaml
+++ b/dev-net-snapshoot/values.yaml
@@ -11,3 +11,10 @@ aenode:
       cpu: 1.2
     requests:
       cpu: 1.1
+  tolerations:
+  - key: "public"
+    operator: "Equal"
+    value: "yes"
+    effect: "NoSchedule"
+  nodeSelector:
+    public: "yes"
